// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`GraphicOrderInteraction > Rendering > renders correct feedbacks: min=0 max=0 1`] = `
<div
  class="qti-instruction-container"
  dir=""
>
  <div
    aria-atomic="true"
    class="feedback info fullwidth"
    role="status"
  >
    
     
    <p>
      You must pick exactly 4 choices
    </p>
  </div>
  
</div>
`;

exports[`GraphicOrderInteraction > Rendering > renders correct feedbacks: min=0 max=3 1`] = `
<div
  class="qti-instruction-container"
  dir=""
>
  <div
    aria-atomic="true"
    class="feedback info fullwidth"
    role="status"
  >
    
     
    <p>
      You must pick exactly 4 choices
    </p>
  </div>
  
</div>
`;

exports[`GraphicOrderInteraction > Rendering > renders correct feedbacks: min=2 max=3 1`] = `
<div
  class="qti-instruction-container"
  dir=""
>
  <div
    aria-atomic="true"
    class="feedback info fullwidth"
    role="status"
  >
    
     
    <p>
      You must pick at least 2 choices and a maximum of 3
    </p>
  </div>
  
</div>
`;

exports[`GraphicOrderInteraction > Rendering > renders correct feedbacks: min=3 max=0 1`] = `
<div
  class="qti-instruction-container"
  dir=""
>
  <div
    aria-atomic="true"
    class="feedback info fullwidth"
    role="status"
  >
    
     
    <p>
      You must pick at least 3 choices
    </p>
  </div>
  
</div>
`;

exports[`GraphicOrderInteraction > Rendering > renders correct feedbacks: min=3 max=3 1`] = `
<div
  class="qti-instruction-container"
  dir=""
>
  <div
    aria-atomic="true"
    class="feedback info fullwidth"
    role="status"
  >
    
     
    <p>
      You must pick exactly 3 choices
    </p>
  </div>
  
</div>
`;

exports[`GraphicOrderInteraction > Rendering > renders image & choices 1`] = `
<body>
  <div>
    
    <div
      aria-disabled="false"
      class="qti-interaction qti-blockInteraction qti-graphicOrderInteraction"
      dir=""
    >
      
       
      <div
        class="qti-instruction-container"
        dir=""
      >
        <div
          aria-atomic="true"
          class="feedback info fullwidth"
          role="status"
        >
          
           
          <p>
            You must pick exactly 4 choices
          </p>
        </div>
        
      </div>
      
       
      <div
        aria-atomic="true"
        aria-live="assertive"
        class="visually-hidden"
      >
        
      </div>
      
       
      <div
        class="qti-flow-container"
        tabindex="-1"
      >
        <div
          class="qti-block"
          tabindex="0"
        >
          
          <svg
            aria-labelledby="tao-desc-123"
            height="860"
            style="--shadow-filter-url: url(#tao-svg-123-filter-shadow);"
            version="1.1"
            viewBox="0 0 1213 860"
            width="1213"
            xmlns="http://www.w3.org/2000/svg"
            xmlns:svgjs="http://svgjs.com/svgjs"
            xmlns:xlink="http://www.w3.org/1999/xlink"
          >
            <desc
              id="tao-desc-123"
            >
              graphic interaction
            </desc>
            
            <defs>
              <filter
                filterUnits="userSpaceOnUse"
                id="tao-svg-123-filter-shadow"
              >
                <fedropshadow
                  dx="0"
                  dy="0"
                  flood-color="black"
                  stdDeviation="1.5"
                />
              </filter>
              <clippath
                id="SvgjsClipPath1003"
              >
                <polygon
                  points="112,491 190,482 193,551 106,549"
                />
              </clippath>
            </defs>
            
            <g
              class="image"
              transform="translate(0, 0)"
            >
              <image
                class="svg-image"
                height="860"
                href="graphic/map-of-the-europe.jpg"
                preserveAspectRatio="none"
                width="1213"
                x="0"
                y="0"
              />
              
              <g
                slot="content"
              >
                <g
                  class="hotspot-choice"
                  data-choice-key="hotspot_1"
                >
                  <g
                    aria-disabled="false"
                    class="shape"
                    role="button"
                    tabindex="-1"
                  >
                    <rect
                      class="shape-outer-border"
                      height="72"
                      width="72"
                      x="312"
                      y="344"
                    />
                    <rect
                      class="shape-inner-border"
                      height="60"
                      width="60"
                      x="318"
                      y="350"
                    />
                    <rect
                      class="shape-dashed-outline"
                      height="72"
                      width="72"
                      x="312"
                      y="344"
                    />
                    <text
                      class="shape-checkmark"
                      x="346.5"
                      y="378.5"
                    >
                      <tspan
                        dy="0"
                        x="346.5"
                      >
                        0
                      </tspan>
                    </text>
                  </g>
                  
                  
                </g>
                <g
                  class="hotspot-choice"
                  data-choice-key="hotspot_4"
                >
                  <g
                    aria-disabled="false"
                    class="shape poly with-label"
                    role="button"
                    tabindex="-1"
                  >
                    <polygon
                      class="shape-shadow"
                      points="112,491 190,482 193,551 106,549"
                    />
                    <polygon
                      class="shape-inner-border"
                      clip-path="url(#SvgjsClipPath1003)"
                      points="112,491 190,482 193,551 106,549"
                    />
                    <polygon
                      class="shape-outer-border"
                      clip-path="url(#SvgjsClipPath1003)"
                      points="112,491 190,482 193,551 106,549"
                    />
                    <polygon
                      class="shape-dashed-outline"
                      clip-path="url(#SvgjsClipPath1003)"
                      points="112,491 190,482 193,551 106,549"
                    />
                    <polygon
                      class="shape-outline-cover"
                      clip-path="url(#SvgjsClipPath1003)"
                      points="112,491 190,482 193,551 106,549"
                    />
                    <text
                      class="shape-checkmark"
                      x="157.8671875"
                      y="516.6171875"
                    >
                      <tspan
                        dy="0"
                        x="157.8671875"
                      >
                        0
                      </tspan>
                    </text>
                  </g>
                  
                  
                </g>
                <g
                  class="hotspot-choice"
                  data-choice-key="hotspot_5"
                >
                  <g
                    aria-disabled="false"
                    class="shape"
                    role="button"
                    tabindex="-1"
                  >
                    <ellipse
                      class="shape-outer-border"
                      cx="153"
                      cy="41"
                      rx="47"
                      ry="36"
                    />
                    <ellipse
                      class="shape-inner-border"
                      cx="153"
                      cy="41"
                      rx="41"
                      ry="30"
                    />
                    <ellipse
                      class="shape-dashed-outline"
                      cx="153"
                      cy="41"
                      rx="47"
                      ry="36"
                    />
                    <text
                      class="shape-checkmark"
                      x="151.5"
                      y="39.5"
                    >
                      <tspan
                        dy="0"
                        x="151.5"
                      >
                        0
                      </tspan>
                    </text>
                  </g>
                  
                  
                </g>
                <g
                  class="hotspot-choice"
                  data-choice-key="hotspot_6"
                >
                  <g
                    aria-disabled="false"
                    class="shape"
                    role="button"
                    tabindex="-1"
                  >
                    <circle
                      class="shape-outer-border"
                      cx="50"
                      cy="50"
                      r="46"
                    />
                    <circle
                      class="shape-inner-border"
                      cx="50"
                      cy="50"
                      r="40"
                    />
                    <circle
                      class="shape-dashed-outline"
                      cx="50"
                      cy="50"
                      r="46"
                    />
                    <text
                      class="shape-checkmark"
                      x="48.5"
                      y="48.5"
                    >
                      <tspan
                        dy="0"
                        x="48.5"
                      >
                        0
                      </tspan>
                    </text>
                  </g>
                  
                  
                </g>
                
              </g>
              
            </g>
          </svg>
          
          
        </div>
      </div>
    </div>
    
    
    
  </div>
</body>
`;

exports[`GraphicOrderInteraction > Rendering > renders simple props into markup 1`] = `
<body>
  <div>
    
    <div
      aria-disabled="true"
      ariabar="baz"
      ariafoo="12"
      class="qti-interaction qti-blockInteraction qti-graphicOrderInteraction foo bar baz"
      data-baz="24"
      data-foo="bar"
      dir="rtl"
      id="interactionId"
      lang="hu"
      role="someUniqueRole"
    >
      
       
      <div
        class="qti-instruction-container"
        dir=""
      >
        
      </div>
      
       
      <div
        aria-atomic="true"
        aria-live="assertive"
        class="visually-hidden"
      >
        
      </div>
      
       
      <div
        class="qti-flow-container"
        tabindex="-1"
      >
        <div
          class="qti-block"
          tabindex="0"
        >
          
          <svg
            aria-labelledby="tao-desc-123"
            height="860"
            style="--shadow-filter-url: url(#tao-svg-123-filter-shadow);"
            version="1.1"
            viewBox="0 0 1213 860"
            width="1213"
            xmlns="http://www.w3.org/2000/svg"
            xmlns:svgjs="http://svgjs.com/svgjs"
            xmlns:xlink="http://www.w3.org/1999/xlink"
          >
            <desc
              id="tao-desc-123"
            >
              graphic interaction
            </desc>
            
            <defs>
              <filter
                filterUnits="userSpaceOnUse"
                id="tao-svg-123-filter-shadow"
              >
                <fedropshadow
                  dx="0"
                  dy="0"
                  flood-color="black"
                  stdDeviation="1.5"
                />
              </filter>
            </defs>
            
            <g
              class="image"
              transform="translate(0, 0)"
            >
              <image
                class="svg-image"
                height="860"
                href="graphic/map-of-the-europe.jpg"
                preserveAspectRatio="none"
                width="1213"
                x="0"
                y="0"
              />
              
              <g
                slot="content"
              >
                
              </g>
              
            </g>
          </svg>
          
          
        </div>
      </div>
    </div>
    
    
    
  </div>
</body>
`;

exports[`GraphicOrderInteraction > Rendering > renders the instruction lang on the feedback block 1`] = `
<body>
  <div>
    
    <div
      aria-disabled="false"
      class="qti-interaction qti-blockInteraction qti-graphicOrderInteraction"
      dir=""
    >
      
       
      <div
        class="qti-instruction-container"
        dir="ltr"
        lang="en-GB"
      >
        <div
          aria-atomic="true"
          class="feedback info fullwidth"
          role="status"
        >
          
           
          <p>
            You must pick at least 1 choice and a maximum of 3
          </p>
        </div>
        
      </div>
      
       
      <div
        aria-atomic="true"
        aria-live="assertive"
        class="visually-hidden"
        lang="en-GB"
      >
        
      </div>
      
       
      <div
        class="qti-flow-container"
        tabindex="-1"
      >
        <div
          class="qti-block"
          tabindex="0"
        >
          
          <svg
            aria-labelledby="tao-desc-123"
            height="860"
            style="--shadow-filter-url: url(#tao-svg-123-filter-shadow);"
            version="1.1"
            viewBox="0 0 1213 860"
            width="1213"
            xmlns="http://www.w3.org/2000/svg"
            xmlns:svgjs="http://svgjs.com/svgjs"
            xmlns:xlink="http://www.w3.org/1999/xlink"
          >
            <desc
              id="tao-desc-123"
            >
              graphic interaction
            </desc>
            
            <defs>
              <filter
                filterUnits="userSpaceOnUse"
                id="tao-svg-123-filter-shadow"
              >
                <fedropshadow
                  dx="0"
                  dy="0"
                  flood-color="black"
                  stdDeviation="1.5"
                />
              </filter>
              <clippath
                id="SvgjsClipPath1018"
              >
                <polygon
                  points="112,491 190,482 193,551 106,549"
                />
              </clippath>
            </defs>
            
            <g
              class="image"
              transform="translate(0, 0)"
            >
              <image
                class="svg-image"
                height="860"
                href="graphic/map-of-the-europe.jpg"
                preserveAspectRatio="none"
                width="1213"
                x="0"
                y="0"
              />
              
              <g
                slot="content"
              >
                <g
                  class="hotspot-choice"
                  data-choice-key="hotspot_1"
                >
                  <g
                    aria-disabled="false"
                    class="shape"
                    role="button"
                    tabindex="-1"
                  >
                    <rect
                      class="shape-outer-border"
                      height="72"
                      width="72"
                      x="312"
                      y="344"
                    />
                    <rect
                      class="shape-inner-border"
                      height="60"
                      width="60"
                      x="318"
                      y="350"
                    />
                    <rect
                      class="shape-dashed-outline"
                      height="72"
                      width="72"
                      x="312"
                      y="344"
                    />
                    <text
                      class="shape-checkmark"
                      x="346.5"
                      y="378.5"
                    >
                      <tspan
                        dy="0"
                        x="346.5"
                      >
                        0
                      </tspan>
                    </text>
                  </g>
                  
                  
                </g>
                <g
                  class="hotspot-choice"
                  data-choice-key="hotspot_4"
                >
                  <g
                    aria-disabled="false"
                    class="shape poly with-label"
                    role="button"
                    tabindex="-1"
                  >
                    <polygon
                      class="shape-shadow"
                      points="112,491 190,482 193,551 106,549"
                    />
                    <polygon
                      class="shape-inner-border"
                      clip-path="url(#SvgjsClipPath1018)"
                      points="112,491 190,482 193,551 106,549"
                    />
                    <polygon
                      class="shape-outer-border"
                      clip-path="url(#SvgjsClipPath1018)"
                      points="112,491 190,482 193,551 106,549"
                    />
                    <polygon
                      class="shape-dashed-outline"
                      clip-path="url(#SvgjsClipPath1018)"
                      points="112,491 190,482 193,551 106,549"
                    />
                    <polygon
                      class="shape-outline-cover"
                      clip-path="url(#SvgjsClipPath1018)"
                      points="112,491 190,482 193,551 106,549"
                    />
                    <text
                      class="shape-checkmark"
                      x="157.8671875"
                      y="516.6171875"
                    >
                      <tspan
                        dy="0"
                        x="157.8671875"
                      >
                        0
                      </tspan>
                    </text>
                  </g>
                  
                  
                </g>
                <g
                  class="hotspot-choice"
                  data-choice-key="hotspot_5"
                >
                  <g
                    aria-disabled="false"
                    class="shape"
                    role="button"
                    tabindex="-1"
                  >
                    <ellipse
                      class="shape-outer-border"
                      cx="153"
                      cy="41"
                      rx="47"
                      ry="36"
                    />
                    <ellipse
                      class="shape-inner-border"
                      cx="153"
                      cy="41"
                      rx="41"
                      ry="30"
                    />
                    <ellipse
                      class="shape-dashed-outline"
                      cx="153"
                      cy="41"
                      rx="47"
                      ry="36"
                    />
                    <text
                      class="shape-checkmark"
                      x="151.5"
                      y="39.5"
                    >
                      <tspan
                        dy="0"
                        x="151.5"
                      >
                        0
                      </tspan>
                    </text>
                  </g>
                  
                  
                </g>
                <g
                  class="hotspot-choice"
                  data-choice-key="hotspot_6"
                >
                  <g
                    aria-disabled="false"
                    class="shape"
                    role="button"
                    tabindex="-1"
                  >
                    <circle
                      class="shape-outer-border"
                      cx="50"
                      cy="50"
                      r="46"
                    />
                    <circle
                      class="shape-inner-border"
                      cx="50"
                      cy="50"
                      r="40"
                    />
                    <circle
                      class="shape-dashed-outline"
                      cx="50"
                      cy="50"
                      r="46"
                    />
                    <text
                      class="shape-checkmark"
                      x="48.5"
                      y="48.5"
                    >
                      <tspan
                        dy="0"
                        x="48.5"
                      >
                        0
                      </tspan>
                    </text>
                  </g>
                  
                  
                </g>
                
              </g>
              
            </g>
          </svg>
          
          
        </div>
      </div>
    </div>
    
    
    
  </div>
</body>
`;
